Added fake emailer config

--- a/src/config/config.env
+++ b/src/config/config.env
@@ -17,7 +17,7 @@ JWT_COOKIE_EXPIRE=30
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
-SMTP_EMAIL=
-SMTP_PASSWORD=
-FROM_EMAIL=
-FROM_NAME=
+SMTP_EMAIL=08e6ecaf0019f6
+SMTP_PASSWORD=ca74dcd3d574b6
+FROM_EMAIL=atk0@outlook.com
+FROM_NAME=DevCamper
